--- a/lang/hu_HU.po
+++ b/lang/hu_HU.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Enfold v4.8.7.1\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-03-17 16:36+0200\n"
-"PO-Revision-Date: 2023-03-24 22:35+0000\n"
+"PO-Revision-Date: 2023-03-25 19:17+0000\n"
 "Last-Translator: Földesi Mihály (foldesistudio.hu)\n"
 "Language-Team: Magyar\n"
 "Language: hu-HU\n"
@@ -35838,7 +35838,7 @@ msgstr ""
 
 #: framework/php/auto-updates/auto-updates.php:340
 msgid "Update your Theme from the WordPress Dashboard"
-msgstr "Téma frissítése a WordPress Vezérlőpultján keresztül"
+msgstr "A sablon frissítése a WordPress Vezérlőpultján keresztül"
 
 #: framework/php/auto-updates/auto-updates.php:350
 msgid "Enter a valid Envato private token"
@@ -43271,7 +43271,7 @@ msgstr "Kicsi"
 
 #: includes/admin/register-admin-options.php:55
 msgid "Theme Options"
-msgstr "Témabeállítások"
+msgstr "Sablon beállítások"
 
 #: includes/admin/register-admin-options.php:119
 msgid "Layout Builder"
@@ -43299,7 +43299,7 @@ msgstr "Import / Export"
 
 #: includes/admin/register-admin-options.php:230
 msgid "Theme Extensions"
-msgstr "Téma bővítmények"
+msgstr "Sablon bővítmények"
 
 #: includes/admin/register-admin-options.php:240
 msgid "OpenStreetMaps"
@@ -44077,7 +44077,7 @@ msgid ""
 "at the moment. (Set in Enfold &raquo; Theme Options)."
 msgstr ""
 "Ez az oldal ki van választva, hogy egyéni 404-es oldalként jelenjen meg, de "
-"jelenleg nem aktív (Lásd: Enfold > Témabeállítások)!"
+"jelenleg nem aktív (Lásd: Enfold > Sablon beállítások)!"
 
 #: includes/class-avia-custom-pages.php:704
 msgid ""
