--- a/lang/de_CH.po
+++ b/lang/de_CH.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Enfold v3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-17 16:40+0000\n"
-"PO-Revision-Date: 2023-04-11 12:47+0000\n"
-"Last-Translator: First Admin_Last\n"
+"PO-Revision-Date: 2023-04-12 09:24+0000\n"
+"Last-Translator: Test test\n"
 "Language-Team: German (Switzerland)\n"
 "Language: de_CH\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,1513,-1,-1\n"
 "X-Textdomain-Support: yes\n"
 "X-Poedit-SearchPath-0: .\n"
-"X-Loco-Version: 2.5.2; wp-5.7.1"
+"X-Loco-Version: 2.6.4; wp-6.2"
 
 #: config-templatebuilder/avia-template-builder/php/class-generic-helper.php:599
 #, php-format
@@ -20767,11 +20767,11 @@ msgstr "Neu hinzufügen"
 
 #: includes/admin/register-portfolio.php:60
 msgid "Portfolio Categories"
-msgstr ""
+msgstr "Portfolio Kategorien"
 
 #: includes/admin/register-portfolio.php:61
 msgid "Portfolio Category"
-msgstr ""
+msgstr "Portfolio Kategorie"
 
 #: config-templatebuilder/avia-shortcodes/portfolio/portfolio.php:35
 msgid "Portfolio Grid"
