--- a/lang/de_DE.po
+++ b/lang/de_DE.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Enfold v4.7.6.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-12-01 12:06+0200\n"
-"PO-Revision-Date: 2023-04-11 12:47+0000\n"
-"Last-Translator: First Admin_Last\n"
+"PO-Revision-Date: 2023-04-12 09:24+0000\n"
+"Last-Translator: Test test\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "X-Poedit-Basepath: ../..\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,1513,-1,-1\n"
 "X-Textdomain-Support: yes\n"
-"X-Loco-Version: 2.5.2; wp-5.7.1\n"
+"X-Loco-Version: 2.6.4; wp-6.2\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: config-templatebuilder/avia-template-builder/php/class-generic-helper.php:599
@@ -21154,14 +21154,12 @@ msgid "Add New"
 msgstr "Neu hinzufügen"
 
 #: includes/admin/register-portfolio.php:60
-#, fuzzy
 msgid "Portfolio Categories"
-msgstr "Portfolio Einträge"
+msgstr "Portfolio Kategorien"
 
 #: includes/admin/register-portfolio.php:61
-#, fuzzy
 msgid "Portfolio Category"
-msgstr "Portfolio Eintrag"
+msgstr "Portfolio Kategorie"
 
 #: config-templatebuilder/avia-shortcodes/portfolio/portfolio.php:35
 msgid "Portfolio Grid"
