--- a/lang/de_DE_formal.po
+++ b/lang/de_DE_formal.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Enfold v3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-12-10 15:59+0200\n"
-"PO-Revision-Date: 2023-04-11 12:47+0000\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2023-04-12 09:25+0000\n"
+"Last-Translator: Test test\n"
 "Language-Team: German (Formal)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -17,7 +17,7 @@ msgstr ""
 "X-Poedit-Basepath: ../..\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,1513,-1,-1\n"
 "X-Textdomain-Support: yes\n"
-"X-Loco-Version: 2.5.2; wp-5.7.1\n"
+"X-Loco-Version: 2.6.4; wp-6.2\n"
 "Language: de_DE_formal\n"
 "X-Poedit-SearchPath-0: .\n"
 
@@ -21198,11 +21198,11 @@ msgstr "Neu hinzufügen"
 
 #: includes/admin/register-portfolio.php:60
 msgid "Portfolio Categories"
-msgstr ""
+msgstr "Portfolio Kategorien"
 
 #: includes/admin/register-portfolio.php:61
 msgid "Portfolio Category"
-msgstr ""
+msgstr "Portfolio Kategorie"
 
 #: config-templatebuilder/avia-shortcodes/portfolio/portfolio.php:35
 msgid "Portfolio Grid"
