--- a/lang/de_CH.po
+++ b/lang/de_CH.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Enfold v3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-17 16:40+0000\n"
-"PO-Revision-Date: 2023-04-12 09:24+0000\n"
+"PO-Revision-Date: 2023-04-16 14:52+0000\n"
 "Last-Translator: Test test\n"
 "Language-Team: German (Switzerland)\n"
 "Language: de_CH\n"
@@ -20962,7 +20962,7 @@ msgstr ""
 #: framework/php/class-form-generator.php:764
 #: config-templatebuilder/avia-template-builder/php/base-classes/class-modal-elements.php:948
 msgid "Prev"
-msgstr "Vorangegangen"
+msgstr "Vorher"
 
 #: config-templatebuilder/avia-template-builder/php/class-shortcode-parser.php:2909
 msgid "Preview"
