--- a/lang/de_CH.po
+++ b/lang/de_CH.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Enfold v3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-08-17 16:40+0000\n"
-"PO-Revision-Date: 2023-04-16 14:52+0000\n"
-"Last-Translator: Test test\n"
+"PO-Revision-Date: 2023-05-30 13:00+0000\n"
+"Last-Translator: test Adminuser\n"
 "Language-Team: German (Switzerland)\n"
 "Language: de_CH\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,1513,-1,-1\n"
 "X-Textdomain-Support: yes\n"
 "X-Poedit-SearchPath-0: .\n"
-"X-Loco-Version: 2.6.4; wp-6.2"
+"X-Loco-Version: 2.6.4; wp-6.2.2"
 
 #: config-templatebuilder/avia-template-builder/php/class-generic-helper.php:599
 #, php-format
@@ -28012,10 +28012,11 @@ msgstr "Die größte Einheit, die angezeigt wird"
 #, php-format
 msgid "The last comment and %d other comment(s) need to be approved."
 msgstr ""
+"Der letzte Kommentar und %d weitere Kommentar(e) müssen genehmigt werden."
 
 #: config-templatebuilder/avia-shortcodes/comments/comments.php:250
 msgid "The last comment needs to be approved."
-msgstr ""
+msgstr "Der letzte Kommentar muss genehmigt werden."
 
 #: config-templatebuilder/avia-shortcodes/menu/menu.php:278
 msgid ""
