--- a/lang/de_DE.po
+++ b/lang/de_DE.po
@@ -3,8 +3,8 @@ msgstr ""
 "Project-Id-Version: Enfold v4.7.6.4\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-12-01 12:06+0200\n"
-"PO-Revision-Date: 2023-04-16 14:50+0000\n"
-"Last-Translator: Test test\n"
+"PO-Revision-Date: 2023-05-30 13:01+0000\n"
+"Last-Translator: test Adminuser\n"
 "Language-Team: German\n"
 "Language: de_DE\n"
 "MIME-Version: 1.0\n"
@@ -18,7 +18,7 @@ msgstr ""
 "X-Poedit-Basepath: ../..\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,1513,-1,-1\n"
 "X-Textdomain-Support: yes\n"
-"X-Loco-Version: 2.6.4; wp-6.2\n"
+"X-Loco-Version: 2.6.4; wp-6.2.2\n"
 "X-Poedit-SearchPath-0: .\n"
 
 #: config-templatebuilder/avia-template-builder/php/class-generic-helper.php:599
@@ -28531,11 +28531,11 @@ msgstr "Die größte Einheit, die angezeigt wird"
 #, php-format
 msgid "The last comment and %d other comment(s) need to be approved."
 msgstr ""
-"Das letzte Kommentar und %d weitere Kommenar(e) müssen genehmigt werden."
+"Der letzte Kommentar und %d weitere Kommentar(e) müssen genehmigt werden."
 
 #: config-templatebuilder/avia-shortcodes/comments/comments.php:250
 msgid "The last comment needs to be approved."
-msgstr "Das letzte Kommentar muss genehmigt werden."
+msgstr "Der letzte Kommentar muss genehmigt werden."
 
 #: config-templatebuilder/avia-shortcodes/menu/menu.php:278
 msgid ""
